# test2

./: CMakeLists.txt  Makefile.in  meson.build  meson_options.txt  old  test2
gir/: meson.build
keygen/: Makefile.am  Makefile.in
llvm/: CMakeLists.txt
protocol/: meson.build
scripts/: Makefile.in
scripts/desc/: xdg-copy.xml  xdg-desktop-icon.xml  xdg-desktop-menu.xml  xdg-email.xml  xdg-file-dialog.xml  xdg-icon-resource.xml  xdg-mime.xml  xdg-open.xml  xdg-realpath.xml  xdg-screensaver.xml  xdg-settings.xml  xdg-su.xml  xdg-terminal.xml
src/: meson.build
wayland-info/: meson.build
